--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrmcree/vue-qrcode-reader",
-  "version": "0.0.0-development",
+  "version": "2.0.0",
   "description": "A set of Vue.js components for detecting and decoding QR codes.",
   "author": {
     "name": "mrmcree",
